<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.justjava.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    android:padding="8dp"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/name"
        android:id="@+id/name"/>

    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/toppings"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/whipped_cream"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:paddingLeft="24dp"
        android:id="@+id/check"
        android:onClick="wDisplay"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/chocolate_topping"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:paddingLeft="24dp"
        android:id="@+id/checkchoc"
        android:onClick="cDisplay"/>

    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/quantity"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:text="-"
            android:onClick="minus"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:id="@+id/quantity_text_view"/>

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="+"
            android:layout_marginBottom="16dp"
            android:onClick="plus"/>

    </LinearLayout>

    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/order_summary"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$0"
        android:layout_marginLeft="8dp"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/order_summary_text_view"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:onClick="submitOrder"/>



</LinearLayout>
</ScrollView>